* gcc.c-torture/execute/20020215-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49788 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-15  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gcc.c-torture/execute/20020215-1.c: New test.
+
 2002-02-14  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/dg.exp: Exclude debug subdir, it has its own .exp.
