* c-decl.c (grokdeclarator): Prevent a segfault on unnamed decls.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49791 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-02-15  Richard Sandiford  <rsandifo@redhat.com>
 
+	* c-decl.c (grokdeclarator): Prevent a segfault on unnamed decls.
+
+2002-02-15  Richard Sandiford  <rsandifo@redhat.com>
+
 	* reload.c (find_dummy_reload): Check that an output register
 	is valid for its mode.
 
