--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -5660,15 +5660,21 @@
   ""
   "*
 {
-  if (get_attr_length (insn) == 4 || !TARGET_64BIT)
-     return \"j%C1\\t%l0\";
+  if (get_attr_length (insn) == 4)
+    return \"j%C1\\t%l0\";
+  else if (TARGET_64BIT)
+    return \"jg%C1\\t%l0\";
   else
-     return \"jg%C1\\t%l0\";
+    abort ();
 }"
   [(set_attr "op_type" "RI")
-   (set (attr "length") (if_then_else
-      (lt (abs (minus (pc) (match_dup 0))) (const_int 60000))
-      (const_int 4) (const_int 6)))])
+   (set (attr "length")
+        (cond [(lt (abs (minus (pc) (match_dup 0))) (const_int 60000))
+                (const_int 4)
+               (ne (symbol_ref "TARGET_64BIT") (const_int 0))
+                 (const_int 6)
+               (eq (symbol_ref "flag_pic") (const_int 0))
+                 (const_int 6)] (const_int 8)))])
 
 (define_insn "*cjump_long"
  [(set (pc)
@@ -5703,15 +5709,21 @@
   ""
   "*
 {  
-  if (get_attr_length (insn) == 4 || !TARGET_64BIT)
-     return \"j%D1\\t%l0\";
+  if (get_attr_length (insn) == 4)
+    return \"j%D1\\t%l0\";
+  else if (TARGET_64BIT)
+    return \"jg%D1\\t%l0\";
   else
-     return \"jg%D1\\t%l0\";
+    abort ();
 }"
   [(set_attr "op_type" "RI")
-   (set (attr "length") (if_then_else
-     (lt (abs (minus (pc) (match_dup 0))) (const_int 60000))
-     (const_int 4) (const_int 6)))])
+   (set (attr "length")
+        (cond [(lt (abs (minus (pc) (match_dup 0))) (const_int 60000))
+                (const_int 4)
+               (ne (symbol_ref "TARGET_64BIT") (const_int 0))
+                 (const_int 6)
+               (eq (symbol_ref "flag_pic") (const_int 0))
+                 (const_int 6)] (const_int 8)))])
 
 (define_insn "*icjump_long"
  [(set (pc)
@@ -5794,15 +5806,21 @@
   ""
   "*
 {
-  if (get_attr_length (insn) == 4 || !TARGET_64BIT)
-     return \"j\\t%l0\";
+  if (get_attr_length (insn) == 4)
+    return \"j\\t%l0\";
+  else if (TARGET_64BIT)
+    return \"jg\\t%l0\";
   else
-     return \"jg\\t%l0\";
+    abort ();
 }"
   [(set_attr "op_type" "RI")
-   (set (attr "length") (if_then_else
-     (lt (abs (minus (pc) (match_dup 0))) (const_int 60000))
-     (const_int 4) (const_int 6)))])
+   (set (attr "length")
+        (cond [(lt (abs (minus (pc) (match_dup 0))) (const_int 60000))
+                (const_int 4)
+               (ne (symbol_ref "TARGET_64BIT") (const_int 0))
+                 (const_int 6)
+               (eq (symbol_ref "flag_pic") (const_int 0))
+                 (const_int 6)] (const_int 8)))])
 
 ;
 ; indirect-jump instruction pattern(s).
