--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-16  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* gcc.dg/decl-1.c: Update, new test.
+
 2002-02-15  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/abi/bitfield1.C: New test.
