* expr.c (store_constructor): Handle target REG case for ARRAY_TYPE.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49805 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat Feb 16 13:39:09 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* expr.c (store_constructor): Handle target REG case for ARRAY_TYPE.
+
 2002-02-16  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.c (pool_stop_uid, other_chunk, far_away, 
