--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-16  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* pa/t-pa (LIB2FUNCS_EXTRA): Don't build lib2funcs.asm.
+	* pa/t-pro (LIB2FUNCS_EXTRA): Likewise.
+	* som.h (DO_GLOBAL_DTORS_BODY): Delete define.
+
 Sat Feb 16 13:48:50 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* config/alpha/alpha.md (*movsi_nt_vms_nofix): Was *movsi_nt_vms;
