--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-16  H.J. Lu <hjl@gnu.org>
+
+	* config/mips/linux.h (ASM_PREFERRED_EH_DATA_FORMAT): New.
+
 2002-02-16  Zack Weinberg  <zack@codesourcery.com>
 
 	* cppinit.c (merge_include_chains): Check for brack being
