Don't mark empty strings for translation.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49816 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-17  Philipp Thomas  <pthomas@suse.de>
+
+	* config/i386/i386.h: Don't mark empty strings for translation.
+
 2002-02-16  H.J. Lu <hjl@gnu.org>
 
 	* config/mips/linux.h (ASM_PREFERRED_EH_DATA_FORMAT): New.
