--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -51,8 +51,12 @@
 ;; ----------------------------------------------------------------------
 
 (define_constants
-  [(FP_REG	6)
-   (SP_REG	7)])
+  [(SC_REG	 3)
+   (FP_REG	 6)
+   (SP_REG	 7)
+   (MAC_REG	 8)
+   (AP_REG	 9)
+   (RAP_REG	10)])
 
 ;; ----------------------------------------------------------------------
 ;; ATTRIBUTES
