Explain why empty strings should not be marked for translation.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49821 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-02-17  Philipp Thomas  <pthomas@suse.de>
 
+	* doc/tm.texi: Explain why empty strings should not be
+	marked for translation.
+
+2002-02-17  Philipp Thomas  <pthomas@suse.de>
+
 	* final.c (output_operand_lossage): Changed to accept
 	printf style arguments. Change calls where necessary.
 	* output.h (output_operand_lossage): Change declaration
