* config/h8300/h8300.c: Fix formatting. 	* config/h8300/h8300.h: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49822 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-17  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.c: Fix formatting.
+	* config/h8300/h8300.h: Likewise.
+
 2002-02-17  Philipp Thomas  <pthomas@suse.de>
 
 	* doc/tm.texi: Explain why empty strings should not be
