2002-02-17  Philipp Thomas  <pthomas@suse.de>
	* config/cris/cris.h: Undefine STARTFILE_SPEC and
	ENDFILE_SPEC before (re)defining them.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49823 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-17  Philipp Thomas  <pthomas@suse.de>
+
+	* config/cris/cris.h: Undefine STARTFILE_SPEC and
+	ENDFILE_SPEC before (re)defining them.
+
 2002-02-17  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.c: Fix formatting.
