--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-17  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/3444:
+	* c-typeck.c (build_binary_op) [BIT_XOR_EXPR]: Remove explicit
+	shortening.
+
 2002-02-17  Philipp Thomas  <pthomas@suse.de>
 
 	* config/cris/cris.h: Undefine STARTFILE_SPEC and
