--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-17  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/20020216-1.c: New test.
+
 2002-02-16  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* gcc.dg/decl-1.c: Update, new test.
