--- a/gcc-3_0-branch/gcc/cp/ChangeLog
+++ b/gcc-3_0-branch/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-17  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* decl.c (start_method): Fix error in 2002-01-10 change.
+
 2002-02-13  Richard Smith <richard@ex-parrot.com>
 
 	* decl.c (maybe_build_cleanup): Do not destroy thunk parameters.
