* libjava.lang/err7.xfail: Removed. 	* libjava.lang/err8.xfail: Removed.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49831 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-18  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* libjava.lang/err7.xfail: Removed.
+	* libjava.lang/err8.xfail: Removed.
+
 2002-02-10  Tom Tromey  <tromey@redhat.com>
 
 	For PR java/5641:
