* regrename.c (kill_set_value): Handle subregs properly.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49838 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Mon Feb 18 11:55:55 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* regrename.c (kill_set_value): Handle subregs properly.
+
 2002-02-18  David Billinghurst <David.Billinghurst@riotinto.com>
 
 	* objc/objc-act.c (handle_impent): Remove leading '*'
