--- a/pch-branch/gcc/ChangeLog
+++ b/pch-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-17  Geoffrey Keating  <geoffk@redhat.com>
+
+	* ggc-common.c (ggc_realloc): Handle X being NULL.
+
 2002-02-16  Geoffrey Keating  <geoffk@redhat.com>
 
 	* ggc-common.c (ggc_realloc): New function.
