* config/h8300/h8300-protos.h: Remove the prototype for 	p_operand. 	* config/h8300/h8300.c (p_operand): Remove. 	* config/h8300/h8300.md: Replace p_operand with 	const_int_operand.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49848 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-02-18  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300-protos.h: Remove the prototype for
+	p_operand.
+	* config/h8300/h8300.c (p_operand): Remove.
+	* config/h8300/h8300.md: Replace p_operand with
+	const_int_operand.
+
 2002-02-18 Philip Blundell <pb@nexus.co.uk>
 
 	* config/arm/arm.c (arm_compute_save_reg_mask): Fix typo in
