--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-02-18  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.md (divmod patterns): Change the
+	constraints for operands[1] to register_operand.
+
+2002-02-18  Kazu Hirata  <kazu@hxi.com>
+
 	* config/h8300/h8300-protos.h: Remove the prototype for
 	p_operand.
 	* config/h8300/h8300.c (p_operand): Remove.
