--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -915,7 +915,7 @@
   [(set (match_operand:QI 0 "register_operand" "=r")
 	(truncate:QI
 	  (udiv:HI
-	    (match_operand:HI 1 "general_operand" "0")
+	    (match_operand:HI 1 "register_operand" "0")
 	    (zero_extend:HI (match_operand:QI 2 "register_operand" "r")))))
    (set (match_operand:QI 3 "register_operand" "=r")
 	(truncate:QI
@@ -937,7 +937,7 @@
   [(set (match_operand:QI 0 "register_operand" "=r")
 	(truncate:QI
 	  (div:HI
-	    (match_operand:HI 1 "general_operand" "0")
+	    (match_operand:HI 1 "register_operand" "0")
 	    (sign_extend:HI (match_operand:QI 2 "register_operand" "r")))))
    (set (match_operand:QI 3 "register_operand" "=r")
 	(truncate:QI
@@ -959,7 +959,7 @@
   [(set (match_operand:HI 0 "register_operand" "=r")
 	(truncate:HI
 	  (udiv:SI
-	    (match_operand:SI 1 "general_operand" "0")
+	    (match_operand:SI 1 "register_operand" "0")
 	    (zero_extend:SI (match_operand:HI 2 "register_operand" "r")))))
    (set (match_operand:HI 3 "register_operand" "=r")
 	(truncate:HI
@@ -981,7 +981,7 @@
   [(set (match_operand:HI 0 "register_operand" "=r")
 	(truncate:HI
 	  (div:SI
-	    (match_operand:SI 1 "general_operand" "0")
+	    (match_operand:SI 1 "register_operand" "0")
 	    (sign_extend:SI (match_operand:HI 2 "register_operand" "r")))))
    (set (match_operand:HI 3 "register_operand" "=r")
 	(truncate:HI
