2002-02-19  Aldy Hernandez  <aldyh@redhat.com>
	* config/i386/i386.md ("mmx_uavgv8qi3"): Use const_vector.
	("mmx_uavgv4hi3"): Same.
	("pmulhrwv4hi3"): Same.

	* tree-inline.c (walk_tree): Handle vectors.

	* c-common.c (constant_expression_warning): Handle vectors.
	(overflow_warning): Same.

	* sched-deps.c (sched_analyze_2): Handle vectors.

	* rtlanal.c (rtx_unstable_p): Handle vectors.
	(rtx_varies_p): Same.
	(count_occurrences): Same.
	(regs_set_between_p): Same.
	(modified_between_p): Same.
	(modified_in_p): Same.
	(volatile_insn_p): Same.
	(volatile_refs_p): Same.
	(side_effects_p): Same.
	(may_trap_p): Same.
	(inequality_comparisons_p): Same.
	(replace_regs): Same.
	(computed_jump_p_1): Same.

	* rtl.c (DEF_MACHMODE): Change all definitions to accept 8th
	argument.
	(inner_mode_array): New.
	(copy_rtx): Handle vectors.
	(copy_most_rtx): Same.
	(rtx_equal_p): Same.
	(get_mode_alignment): Adjust for vectors.

	* resource.c (mark_referenced_resources): Handle vectors.
	(mark_set_resources): Same.

	* reload1.c (eliminate_regs): Handle vectors.
	(elimination_effects): Same.
	(scan_paradoxical_subregs): Same.

	* reload.c (subst_reg_equivs): Handle vectors.

	* regrename.c (scan_rtx): Handle vectors.

	* regclass.c (reg_scan_mark_refs): Handle vectors.

	* recog.c (find_single_use_1): Handle vectors.

	* local-alloc.c (equiv_init_varies_p): Handle vectors.
	(contains_replace_regs): Same.
	(memref_referenced_p): Same.

	* integrate.c (copy_rtx_and_substitute): Handle vectors.
	(subst_constants): Same.

	* genattrtab.c (attr_copy_rtx): Handle vectors.
	(encode_units_mask): Same.
	(clear_struct_flag): Same.
	(count_sub_rtxs): Same.

	* gcse.c (want_to_gcse_p): Handle vectors.
	(oprs_unchanged_p): Same.
	(hash_expr_1): Same.
	(oprs_not_set_p): Same.
	(expr_killed_p): Same.
	(compute_transp): Same.
	(store_ops_ok): Same.

	* function.c (purge_addressof_1): Do not allow paradoxical subregs
	of vectors.
	(fixup_var_refs_1): Same.
	(instantiate_virtual_regs_1): Same.

	

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -18999,14 +18999,14 @@
 	 (plus:V8QI (plus:V8QI
 		     (match_operand:V8QI 1 "register_operand" "0")
 		     (match_operand:V8QI 2 "nonimmediate_operand" "ym"))
-		    (vec_const:V8QI (parallel [(const_int 1)
-					       (const_int 1)
-					       (const_int 1)
-					       (const_int 1)
-					       (const_int 1)
-					       (const_int 1)
-					       (const_int 1)
-					       (const_int 1)])))
+		    (const_vector:V8QI [(const_int 1)
+					(const_int 1)
+					(const_int 1)
+					(const_int 1)
+					(const_int 1)
+					(const_int 1)
+					(const_int 1)
+					(const_int 1)]))
 	 (const_int 1)))]
   "TARGET_SSE || TARGET_3DNOW_A"
   "pavgb\t{%2, %0|%0, %2}"
@@ -19018,10 +19018,10 @@
 	 (plus:V4HI (plus:V4HI
 		     (match_operand:V4HI 1 "register_operand" "0")
 		     (match_operand:V4HI 2 "nonimmediate_operand" "ym"))
-		    (vec_const:V4HI (parallel [(const_int 1)
-					       (const_int 1)
-					       (const_int 1)
-					       (const_int 1)])))
+		    (const_vector:V4HI [(const_int 1)
+					(const_int 1)
+					(const_int 1)
+					(const_int 1)]))
 	 (const_int 1)))]
   "TARGET_SSE || TARGET_3DNOW_A"
   "pavgw\t{%2, %0|%0, %2}"
@@ -19735,12 +19735,11 @@
 		       (match_operand:V4HI 1 "register_operand" "0"))
 	            (sign_extend:V4SI
 		       (match_operand:V4HI 2 "nonimmediate_operand" "ym")))
-	      (vec_const:V4SI
-	         (parallel [(const_int 32768)
-			    (const_int 32768)
-			    (const_int 32768)
-			    (const_int 32768)])))
-	   (const_int 16))))]
+		 (const_vector:V4SI [(const_int 32768)
+				     (const_int 32768)
+				     (const_int 32768)
+				     (const_int 32768)]))
+	      (const_int 16))))]
   "TARGET_3DNOW"
   "pmulhrw\\t{%2, %0|%0, %2}"
   [(set_attr "type" "mmx")])
