* doc/rtl.texi (Constants): Close @code tag.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49855 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/rtl.texi
+++ b/gcc/doc/rtl.texi
@@ -1166,7 +1166,7 @@ The number of units in a @code{const_vector} is obtained with the macro
 @code{CONST_VECTOR_NUNITS} as in @code{CONST_VECTOR_NUNITS (@var{v})}.
 
 Individual elements in a vector constant are accessed with the macro
-@code{CONST_VECTOR_ELT} as in @code{CONST_VECTOR_ELT (@var{v}, @var{n})
+@code{CONST_VECTOR_ELT} as in @code{CONST_VECTOR_ELT (@var{v}, @var{n})}
 where @var{v} is the vector constant and @var{n} is the element
 desired.
 
