* varasm.c (compare_constant): Fix typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49856 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/pch-branch/gcc/ChangeLog
+++ b/pch-branch/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2002-02-18  Geoffrey Keating  <geoffk@redhat.com>
 
+	* varasm.c (compare_constant): Fix typo.
+
 	* varasm.c: Don't include obstack.h.
 	(struct varasm_status): x_const_rtx_hash_table is a hash of rtxes.
 	(struct rtx_const): Give substructures names, improve formatting.
